# porcelainclaire

./: .env.local.example  .gitignore  AGENTS.md  LICENSE  NEXT_STEPS.md  README.md  next.config.ts  package.json  pnpm-lock.yaml
.cursor/rules/: commit-messages.mdc
.github/workflows/: sync-wechat.yml
public/: manifest.json
scripts/: generate-icons.mjs
src/: middleware.ts
src/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
src/app/about/: page.tsx
src/app/api/revalidate/: route.ts
src/app/api/search/: route.ts
src/app/articles/[slug]/: page.tsx
src/components/: ArticleCard.tsx  ArticleSearchDialog.tsx  Footer.tsx  Header.tsx  Logo.tsx  PwaInstallCallout.tsx  PwaInstallProvider.tsx  ReadingProgress.tsx  ThemeToggle.tsx  WeChatButton.tsx
src/lib/: article-search.ts  articles.ts  pwa-install.ts  reading.ts
supabase/: config.toml
supabase/migrations/: 001_create_articles.sql  002_article_slugs_strip_hyphens.sql  003_add_updated_at_trigger_drop_redundant_index.sql  004_article_search.sql
sync/: pyproject.toml
sync/src/sync/: __init__.py  cli.py  fetcher.py  parser.py  storage.py  tagger.py
