[project]
name = "porcelainclaire-sync"
version = "0.1.0"
description = "Sync WeChat articles to Supabase for Porcelain Claire blog"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "beautifulsoup4>=4.13",
    "supabase>=2.12",
    "click>=8.1",
    "feedparser>=6.0",
    "google-genai>=1.68.0",
    "python-dotenv>=1.2.2",
]

[project.scripts]
sync = "sync.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/sync"]

[dependency-groups]
dev = ["ruff>=0.9"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
